--- a/assert/css/index.css
+++ b/assert/css/index.css
@@ -1,10 +1,22 @@
 .layui-side .userinfo {
+  position: relative;
   height: 60px;
   line-height: 60px;
   padding-left: 40px;
   font-size: 13px;
   user-select: none;
   border-bottom: 1px solid #282b33;
+}
+.layui-side .userinfo .welcomed {
+  position: relative;
+  top: 4px;
+  line-height: 1;
+  display: inline-block;
+  max-width: 90px;
+  height: 13px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 .hid {
   visibility: hidden;
