--- a/assert/less/login.less
+++ b/assert/less/login.less
@@ -55,10 +55,19 @@ html,body {
             .links {
                 float: right;
             }
+
+            .passChange {
+                position: absolute;
+                top: 7px;
+                right: 10px;
+                width: 24px;
+            }
         }
     }
 
     .login-reg {
         display: none;
     }
+
+
 }
